err/javatools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/javatools'...
Listing './lib/python3.5/site-packages/javatools/cheetah'...
Listing './lib/python3.5/site-packages/javatools/cheetah/data'...
Compiling './lib/python3.5/site-packages/javatools/classinfo.py'...
***   File "./lib/python3.5/site-packages/javatools/classinfo.py", line 54
    print "   ",
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/javatools/distdiff.py'...
***   File "./lib/python3.5/site-packages/javatools/distdiff.py", line 482
    except KeyboardInterrupt, keyint:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/javatools/distinfo.py'...
***   File "./lib/python3.5/site-packages/javatools/distinfo.py", line 216
    print "distribution provides:"
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/javatools/jarinfo.py'...
***   File "./lib/python3.5/site-packages/javatools/jarinfo.py", line 178
    print "Manifest not present."
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/javatools/manifest.py'...
***   File "./lib/python3.5/site-packages/javatools/manifest.py", line 489
    print "Please specify a single JAR to query"
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/javatools/report.py'...
***   File "./lib/python3.5/site-packages/javatools/report.py", line 280
    except TypeError, te:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/javatools-1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
